Remove deprecated usages.
Change-Id: I0d17a0667cb67eb6369b5df5b980f6d5d9e09810
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-on: https://git.eclipse.org/r/116265
Tested-by: Hudson CI