@@ -1,5 +1,5 @@
 /****************************************************************
- * Copyright (c) 2006, 2016 IBM Corporation and others.
+ * Copyright (c) 2006, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -342,7 +342,7 @@ public abstract class AbstractChartBuilder extends Composite implements IUpdateL
             return (Double) o;
         }
         try {
-            return new Double(o.toString());
+            return Double.valueOf(o.toString());
         } catch (NumberFormatException e) {
             return null;
         }
